[package]
name = "bacnet-discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
bacnet-rs = "0.2.2"
crossterm = "0.29.0"
ctrlc = "3.5.2"
futures-util = "0.3.31"
if-addrs = "0.15.0"
ratatui = "0.30.0"
socket2 = { version = "0.6.2", features = ["all"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
